Closed Bug 940071 Opened 12 years ago Closed 12 years ago

We leak the proto and iface cache for workers

Categories

(Core :: DOM: Workers, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla28

People

(Reporter: bzbarsky, Assigned: khuey)

References

Details

(Keywords: regression, Whiteboard: [MemShrink])

Attachments

(1 file)

We allocate it in mozilla::dom::CreateGlobal, but the finalize hooks for DOM globals created via codegen don't free it.
Whiteboard: [MemShrink]
This is nightly-only, since this code is new from bug 928312.
Blocks: 928312
Keywords: regression
Assignee: nobody → khuey
Attachment #8334338 - Flags: review?(bzbarsky) → review+
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla28
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: