Bug 940071: Free the proto and iface cache for generated globals. r=bz